# LearnDirectX11

./: .gitignore  CMakeLists.txt  README.md
00_Compile_HLSL_Util/: CMakeLists.txt  build.sh  subtex_ps.hlsl
00_D3D11_Primer/01-HLSL_Triangle/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp
00_D3D11_Primer/02_HLSL_CompileShader/: CMakeLists.txt  d3dclass.cpp  d3dclass.h
00_D3D11_Primer/03_HLSL_Compute_Shader/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp
00_D3D11_Primer/04_HLSL_Compute_Shdaer_demo/: CMakeLists.txt  ChiliTimer.cpp  ChiliTimer.h  d3dclass.cpp  d3dclass.h
00_D3D11_Primer/04_HLSL_Compute_Shdaer_demo/shader/: ps.hlsl
00_D3D11_Primer/04_HLSL_Grammar/: systemclass.cpp
00_D3D11_Primer/05_HLSL_Compute_Algorithm/: ComputeShader.h  d3dclass.cpp  d3dclass.h  main.cpp  systemclass.cpp
00_D3D11_Primer/05_HLSL_Compute_Algorithm/shader/: TextureMul_R8G8B8A8_CS.hlsl  Triangle_PS.hlsl
00_D3D11_Primer/05_HLSL_Grammar/: ComputeShader.cpp  cmake_win.sh  流程图.drawio
00_D3D11_Primer/05_HLSL_Grammar/shader/: compute_CS.hlsl
00_D3D11_Primer/06_HLSL_Compute_Grammar/: CMakeLists.txt  ComputeShader.cpp  systemclass.cpp  systemclass.h
00_D3D11_Primer/06_HLSL_Compute_Grammar/shader/: compute_CS.hlsl
00_D3D11_Primer/07_Index_Constant_Buffer/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp
00_D3D11_Primer/07_Index_Constant_Buffer/shader/: Cube.hlsli
00_D3D11_Primer/07_Mouse_Keyboard/: d3dclass.cpp  systemclass.cpp  systemclass.h
00_D3D11_Primer/07_Mouse_Keyboard/shader/: Cube_PS.hlsl  Triangle_PS.inc  Triangle_VS.inc
00_D3D11_Primer/08_Mouse_Keyboard/: CMakeLists.txt  ComputeShader.cpp  d3dclass.h
00_D3D11_Primer/08_Mouse_Keyboard/misc/: DXTrace.h
00_D3D11_Primer/08_Mouse_Keyboard/misc/m_k/: keyboard.h
00_D3D11_Primer/08_Mouse_Keyboard/shader/: Cube.hlsli  Cube_VS.hlsl  TextureMul_R32G32B32A32_CS.hlsl  Triangle.hlsli  Triangle_VS.hlsl
00_D3D11_Primer/09_Lighting/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp  systemclass.h
00_D3D11_Primer/09_Lighting/shader/: ComputeShader_CS.hlsl  Light_PS.hlsl  Light_VS.cso  Light_VS.hlsl
00_D3D11_Primer/10_ShowText/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp  systemclass.h
00_D3D11_Primer/10_ShowText/misc/m_k/: mouse.h
00_D3D11_Primer/10_ShowText/shader/: Light_PS.cso
00_d3d11_test_env/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp
00_d3d11_test_env/shader/: ps.hlsl  subtex_ps.h  subtex_vs.h  test_vs.hlsl  tex_ps.hlsl  tex_vs.hlsl  triangle_ps.hlsl  triangle_vs.hlsl
01_Triangle_Rect/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp
01_Triangle_Rect/shader/: vs.hlsl
02_Triangle_Rect_Ex/: CMakeLists.txt  d3dclass.cpp  d3dclass.h
02_Triangle_Rect_Ex/misc/: DXTrace.cpp  DXTrace.h
03_Rect_Constant_Buffer/: d3dclass.cpp  d3dclass.h  systemclass.cpp  systemclass.h
03_Rect_Constant_Buffer/shader/: tex_vs.hlsl  vs.hlsl
04_RenderSystem/: d3dclass.cpp  d3dclass.h  systemclass.cpp
04_RenderSystem/shader/: vs.hlsl
05_Rect_Tex/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp
05_Rect_Tex/shader/: Triangle.hlsli  tex_ps.hlsl  tex_vs.hlsl  triangle_ps.hlsl
06_Rect_Sueecss_NewSys/: CMakeLists.txt  Main.cpp  d3dApp.cpp  d3dApp.h  d3dDemo.cpp  d3dDemo.h
06_Rect_Sueecss_NewSys/HLSL/: Triangle_PS.cso  Triangle_VS.cso  triangle.ps  triangle.vs  trianglePixelShader.hlsl  triangleVertexShader.hlsl
07_Standard_Draw_System/: d3dclass.cpp  d3dclass.h  systemclass.cpp
07_Standard_Draw_System/misc/: DXTrace.h
07_hw3d_Draw_System/: CMakeLists.txt  d3dclass.cpp
07_hw3d_Draw_System/shader/: vs.hlsl
08_Standard_Sys_Constant_Buffer/: d3dclass.cpp  d3dclass.h  main.cpp  systemclass.cpp
08_Standard_Sys_Constant_Buffer/misc/: DXTrace.cpp
08_Standard_Sys_Draw_Cube/: CMakeLists.txt  d3dclass.cpp  systemclass.cpp
08_hw3d_Constant_Buffer/: CMakeLists.txt  systemclass.cpp
08_hw3d_Constant_Buffer/misc/: DXTrace.cpp
08_hw3d_Constant_Buffer/shader/: vs.hlsl
09_Standard_Sys_Draw_Cube/: d3dclass.h
09_Standard_Sys_Draw_Cube/misc/: dxgiInfoManager.cpp
09_hw3d_Draw_Cube/: d3dclass.cpp  systemclass.cpp
09_hw3d_Draw_Cube/misc/: dxgiInfoManager.h
10_hw3d_bindable_drawable_sys/: CMakeLists.txt  d3dclass.h  systemclass.cpp
10_hw3d_bindable_drawable_sys/00_System_Design_idea/: drawable_System.drawio
10_hw3d_bindable_drawable_sys/bindable/: bindable.h  indexBuffer.cpp  indexBuffer.h  inputLayout.cpp  inputLayout.h  pixelShader.cpp  pixelShader.h  transformCbuf.h  vertexBuffer.h  vertexShader.cpp  vertexShader.h
10_hw3d_bindable_drawable_sys/drawable/: box.cpp  box.h  drawable.cpp  drawable.h  graphics2D.cpp  graphics2D.h
10_hw3d_bindable_drawable_sys/shader/: vs.hlsl
11_hw3d_Texture/: CMakeLists.txt  d3dclass.cpp  systemclass.cpp  systemclass.h
11_hw3d_Texture/00_System_Design_idea/: drawable_System.drawio
11_hw3d_Texture/bindable/: bindable.h  bindableBase.h  indexBuffer.h  texture.cpp  transformCbuf.cpp  vertexBuffer.cpp  vertexShader.h
11_hw3d_Texture/drawable/: drawable.cpp  graphics2D.cpp  skinned_box.cpp
12_hw3d_Imgui/: CMakeLists.txt  d3dclass.cpp  d3dclass.h  systemclass.cpp  systemclass.h
12_hw3d_Imgui/bindable/: bindable.cpp  texture.h  topology.cpp  topology.h  vertexBuffer.h
12_hw3d_Imgui/drawable/: box.h  drawable.h  drawableBase.h
12_hw3d_Imgui/misc/: camera.cpp  camera.h  imguiManager.cpp
13_hw3d_dynamic_lighting/: CMakeLists.txt  systemclass.cpp  systemclass.h
13_hw3d_dynamic_lighting/bindable/: constantBuffers.h  transformCbuf.cpp  vertexShader.cpp
13_hw3d_dynamic_lighting/drawable/: box.cpp  graphics2D.h  skinned_box.h
13_hw3d_dynamic_lighting/misc/: imguiManager.h
renderToTex_Lite/: cameraclass.cpp  cameraclass.h  d3dclass.cpp  d3dclass.h  debugwindowclass.cpp  debugwindowclass.h  graphicsclass.cpp  lightclass.cpp  lightclass.h  lightshaderclass.cpp  lightshaderclass.h  modelclass.cpp  modelclass.h  rendertextureclass.cpp  systemclass.cpp  textureclass.cpp  textureshaderclass.cpp  textureshaderclass.h
renderToTex_Lite/备份/: inputclass.cpp  inputclass.h
